# skill-router

./: .coverage  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/orchestration/: registry.json  registry.json.bak
.github/workflows/: ci.yml
.memory-bank/: CONTEXT.md  MEMORY.md  REFERENCE.md  activeContext.md  agent-sessions.md  currentTask.md  decisions.graph.jsonl  progress.md  systemPatterns.md
.memory-bank/topics/: _index.md  agent-sessions.md  code-map.md  cross-cli-skill-routing.md  skill-catalog-health.md
scripts/: split_jpa_patterns.py  split_skill.py
src/skill_router/: __init__.py  __main__.py  cli.py  command.py
src/skill_router/features/: __init__.py
src/skill_router/features/audit/: __init__.py  command.py
src/skill_router/features/budget/: __init__.py  command.py
src/skill_router/features/catalog/: __init__.py  command.py
src/skill_router/features/classify/: __init__.py  command.py
src/skill_router/features/depth/: __init__.py  command.py
src/skill_router/features/discover/: __init__.py  command.py
src/skill_router/features/recommend/: __init__.py  command.py  index.py
src/skill_router/features/routing/: __init__.py  command.py  route.py  routes.py
src/skill_router/features/routing/route_groups/: __init__.py  core.py  delivery.py  platform_cloud.py  tools_misc.py  web_frontend.py  workflow.py
src/skill_router/shared/: __init__.py  availability.py  compat.py  config.py  embed.py  paths.py  skill_io.py
tests/: __init__.py  conftest.py  test_architecture.py  test_audit.py  test_availability.py  test_budget.py  test_catalog.py  test_classify.py  test_cli.py  test_command_hook.py  test_depth.py  test_discover.py  test_recommend.py  test_routing.py  test_skill_io.py
