[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "skill-router"
version = "0.1.0"
description = "Unified skill routing for cross-CLI coding agents: classify prompt, route hints, select skill depth, audit catalog health."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "heldigard" }]
keywords = ["claude-code", "codex", "antigravity", "skill-routing", "prompt-router", "llm-agents"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: General",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.10"]

# Three shims preserve the wired ecosystem paths so settings.json / hooks.json
# keep resolving untouched:
#   ~/.claude/hooks/prompt-router.py  -> skill_router.command.main  (UserPromptSubmit hook)
#   ~/.claude/scripts/intent_route    -> skill_router.cli           (CLI, was intent_route.py)
#   ~/.claude/scripts/skills-audit    -> skill_router.cli           (CLI, was skills-audit.py)
#   ~/.claude/scripts/skill-router    -> skill_router.cli           (NEW unified CLI)

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["src/skill_router"]

[tool.mypy]
ignore_missing_imports = true
